# wechat_clawbot_sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: echo_bot.py
src/wechat_clawbot/: __init__.py  _logging.py  client.py
src/wechat_clawbot/api/: __init__.py  client.py  config_cache.py
src/wechat_clawbot/auth/: __init__.py  interfaces.py
src/wechat_clawbot/cdn/: urls.py
src/wechat_clawbot/media/: __init__.py  mime.py  transfer.py
src/wechat_clawbot/messaging/: inbound.py  interfaces.py  service.py  typing.py
src/wechat_clawbot/polling/: __init__.py  interfaces.py
src/wechat_clawbot/state/: __init__.py  file.py  interfaces.py  memory.py
src/wechat_clawbot_sdk/: __init__.py  _logging.py  errors.py  models.py  version.py
src/wechat_clawbot_sdk/api/: client.py  encoding.py  headers.py  httpx_transport.py  interfaces.py  protocol.py
src/wechat_clawbot_sdk/auth/: service.py
src/wechat_clawbot_sdk/cdn/: __init__.py  aes_ecb.py
src/wechat_clawbot_sdk/media/: __init__.py  silk_transcode.py  transfer.py
src/wechat_clawbot_sdk/messaging/: __init__.py  service.py
src/wechat_clawbot_sdk/polling/: service.py
src/wechat_clawbot_sdk/state/: __init__.py  file.py
tests/: test_protocol_alignment.py
